--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "github"
   ],
   "author": "GuideSmiths Ltd",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "github-api": "^3.0.0",
     "lodash.get": "^4.4.2"
